# bms

./: .env  Cargo.toml  README.md  Rocket.toml  migrate.sql  rocket.postman_collection.json  rustfmt.toml
src/: main.rs
src/db/: mod.rs
src/model/: book.rs  book_class.rs  lend_record.rs  mod.rs  reader.rs  usr.rs
src/router/: book.rs  book_class.rs  health.rs  lend_record.rs  mod.rs  reader.rs  usr.rs
src/service/: book.rs  book_class.rs  lend_record.rs  mod.rs  reader.rs  usr.rs
src/tests/: book.rs  book_class.rs  health.rs  lend_record.rs  mod.rs  reader.rs  usr.rs
src/utils/: http_client.rs  mod.rs
