[package]
name = "bms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
validator = { version = "0.16", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.rocket]
rocket = "=0.5.0-rc.3"
features = ["json"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies.sqlx]
version = "0.6.3"
default-features = true
features = ["macros", "offline", "migrate"]